Start working negotiation UI and finalized generate passcode for negotiation

--- a/ACUHelpdesk/ClientApp/public/locales/ar/translation.json
+++ b/ACUHelpdesk/ClientApp/public/locales/ar/translation.json
@@ -3,6 +3,7 @@
   "menubar": {
     "home": "الصفحة الرئيسية",
     "socecocab": "المجلس الإقتصادي الإجتماعي",
+    "createpasscode": "خلق كلمة سر للمفاوضات",
     "spcomm": {
       "spcomm": "لجان مختصة",
       "maincom": "لجنة قواعد المنشأ",
@@ -103,5 +104,11 @@
     "alreadyexist": "😲 البريد الإلكتروني المستخدم موجود",
     "registration": "👍 لقد تم التسجيل بنجاح إظطلع على بريدك الإلكتروني لتفعيل حسابك",
     "chooseavatar": "إختر صورة"
+  },
+  "createpasscode": {
+    "header": "خلق كلمة سر للمفاوضات",
+    "generate": "تابع",
+    "emailplaceholder": "البريد الإلكتروني",
+    "passcodegenerated": "لقد تم خلق وإرسال كلمة السر بنجاح"
   }
 }
