Removing irrelevant text...

--- a/ACUHelpdesk/ClientApp/public/locales/ar/translation.json
+++ b/ACUHelpdesk/ClientApp/public/locales/ar/translation.json
@@ -6,20 +6,22 @@
     "socecocab": "المجلس الإقتصادي الإجتماعي",
     "createpasscode": "خلق كلمة سر للمفاوضات",
     "spcomm": {
-      "spcomm": "لجان مختصة",
+      "spcomm": "اللجان المختصة",
+      "spcommtitle": "اللجان المعنية بمفاوضات الاتحاد الجمركي العربي",
       "maincom": "لجنة قواعد المنشأ",
-      "execcom": "لجمة التنفيذ والمتابعة",
+      "execcom": "لجنة التنفيذ والمتابعة",
       "othercom": "لجان أخرى (للتدقيق)",
-      "customcom": "لجنة الاتحاد الجمركي ",
+      "customcomtitle": "اللجان المعنية بمفاوضات الاتحاد الجمركي العربي",
+      "customcom": "لجنة الاتحاد الجمركي",
       "tariffcom": "لجنة التعرفة العربية الموحدة"
     },
-    "reports": "تقارير",
+    "reports": "التقارير الفنية والعلمية",
     "meetings": {
-      "meetings": "إجتماعات",
+      "meetings": "رزنامة الاجتماعات الفنية ذات العلاقة",
       "formalmeetings": "الاجتماعات الرسمية المقبلة للجامعة",
       "upcomingmeetings": "الاجتماعات الوطنية والإقليمية الأخرى ذات العلاقة"
     },
-    "negotiation": "المفاوضات",
+    "negotiation": "مجالات المفاوضات ",
     "products": "تصنيف السلع",
     "login": "دخول",
     "logout": "خروج",
