--- a/ACUHelpdesk/ClientApp/public/locales/ar/translation.json
+++ b/ACUHelpdesk/ClientApp/public/locales/ar/translation.json
@@ -7,7 +7,7 @@
     "createpasscode": "خلق كلمة سر للمفاوضات",
     "spcomm": {
       "spcomm": "اللجان المختصة",
-      "spcommtitle": "اللجان المعنية بمفاوضات الاتحاد الجمركي العربي",
+      "spcommtitle": "اللجان المعنية بمنطقة التجارة الحرة العربية الكبرى",
       "maincom": "لجنة قواعد المنشأ",
       "execcom": "لجنة التنفيذ والمتابعة",
       "othercom": "لجان أخرى (للتدقيق)",
@@ -17,7 +17,7 @@
     },
     "reports": "التقارير الفنية والعلمية",
     "meetings": {
-      "meetings": "رزنامة الاجتماعات الفنية ذات العلاقة",
+      "meetings": "رزنامة الاجتماعات الفنية",
       "formalmeetings": "الاجتماعات الرسمية المقبلة للجامعة",
       "upcomingmeetings": "الاجتماعات الوطنية والإقليمية الأخرى ذات العلاقة"
     },
