Fix Negotiation Title

--- a/ACUHelpdesk/ClientApp/public/locales/ar/translation.json
+++ b/ACUHelpdesk/ClientApp/public/locales/ar/translation.json
@@ -21,7 +21,7 @@
       "formalmeetings": "الاجتماعات الرسمية المقبلة للجامعة",
       "upcomingmeetings": "الاجتماعات الوطنية والإقليمية الأخرى ذات العلاقة"
     },
-    "negotiation": "مجالات المفاوضات ",
+    "negotiation": "المفاوضات",
     "products": "تصنيف السلع",
     "login": "دخول",
     "logout": "خروج",
